Integracion de funcionalidad para subir imagenes y configuracion de roles en seguridad